...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

...
            android:layout_marginTop="60dp"
            android:text="@string/change_the_theme_from_dark_to_light_and_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/changeThemeButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/change"
...
            android:layout_marginTop="72dp"
            android:text="@string/deletes_account_from_the_system"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#FF5722"
            android:text="@string/delete2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/GoneGoogle"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        tools:layout_editor_absoluteX="0dp">

...
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/savePassButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="224dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00BCD4"
            android:text="@string/save"
...
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif-light"
                android:hint="@string/old_password"
                android:minHeight="48dp"
...
            android:layout_marginStart="16dp"
            android:layout_marginTop="152dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif-light"
                android:hint="@string/new_password"
                android:minHeight="48dp"
...
            android:layout_marginStart="16dp"
            android:layout_marginTop="220dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatNewPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif-light"
                android:hint="Repeat new password"
                android:minHeight="48dp"
...
