<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/Home">
    <fragment
        android:id="@+id/Home"
        android:name="com.example.sep4android.Fragments.MainFragment"
        android:label="My rooms" >
        <action
            android:id="@+id/action_Home_to_Test"
            app:destination="@id/Statistics" />
    </fragment>

    <fragment
        android:id="@+id/Statistics"
        android:name="com.example.sep4android.Fragments.StatisticsFragment"
        android:label="Statistics">
        <action
            android:id="@+id/action_Test_to_Home"
            app:destination="@id/Home"
            app:launchSingleTop="false" />
    </fragment>

    <fragment
        android:id="@+id/Settings"
        android:name="com.example.sep4android.Fragments.SettingsFragment"
        android:label="Settings"/>

    <fragment
        android:id="@+id/Archive"
        android:name="com.example.sep4android.Fragments.ArchiveFragment"
        android:label="Measurements"/>

    <fragment
        android:id="@+id/CreateRoom"
        android:name="com.example.sep4android.Fragments.CreateRoomFragment"
        android:label="Add new roomObject"/>

    <fragment
        android:id="@+id/HumidityThreshold"
        android:name="com.example.sep4android.Fragments.HumidityThresholdFragment"
        android:label="Humidity Threshold List"/>

    <fragment
        android:id="@+id/TemperatureThreshold"
        android:name="com.example.sep4android.Fragments.TemperatureThresholdFragment"
        android:label="Temperature Threshold List"/>

</navigation>