<resources>
    <string name="app_name">Air4You</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_temperature">Current temperature</string>
    <string name="current_humidity_level">Current humidity level</string>
    <string name="temp">temp</string>
    <string name="carbon">carbon</string>
    <string name="hum">hum</string>
    <string name="current_co2">Current CO2</string>
    <string name="log_token">Log Token</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="temperature">Temperature</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="temperature_threshold">Temperature Threshold</string>
    <string name="date_measurement_list">Date</string>
    <string name="temp_measurement_list">Temp</string>
    <string name="hum_measurement_list">Hum</string>
    <string name="co2_measurement_list">Co2</string>
    <string name="bind_holder_temp"> %1$.2f ℃</string>
    <string name="bind_holder_name">Room: %1$s</string>
    <string name="pop_up_title">"What you want to do with: " %1$s</string>
    <string name="bind_holder_hum"> %1$.2f </string>
    <string name="bind_holder_co2"> %1$.2f </string>
    <string name="bind_holder_room_name"> %1$s </string>
    <string name="bind_holder_room_count_online">Active Rooms: %1$d online</string>
    <string name="bind_holder_room_count_offline">Active Rooms: %1$d offline</string>
    <string name="temperature_treshold">Temperature Threshold</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End Time</string>
    <string name="start_value">Start Value</string>
    <string name="end_value">End Value</string>
    <string name="humidity_thresholds">Humidity Thresholds</string>
    <string name="add_new_threshold">Add new threshold</string>
    <string name="edit_threshold">Edit threshold</string>
    <string name="select_your_room">Select room:</string>
    <string name="select_start_value">Select Start Value</string>
    <string name="select_end_value">Select End Value</string>
    <string name="add">Save</string>
    <string name="select">Select</string>
    <string name="spinner">Spinner</string>
    <string name="nan">NaN</string>
    <string name="change_name">Change Name</string>
    <string name="enter_new_name_here">Enter new name Here</string>
    <string name="reset_data">Reset data</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="settings">settings</string>
    <string name="create_new_room">Create New Room:</string>
    <string name="enter_device_id_here">Enter Device Id Here</string>
    <string name="enter_room_name">Enter Room Name</string>
    <string name="create_room">Create Room</string>
    <string name="select_your_roomobject">Select your room:</string>
    <string name="status">Status :</string>
    <string name="average_temperature_per_day">Average Temperature per Day</string>
    <string name="average_humidity_per_day">Average Humidity per Day</string>
    <string name="average_co2_per_day">Average Co2 per Day</string>
    <string name="nav_header_desc">nav_header_desc</string>
    <string name="sign_up">Sign Up</string>
    <string name="active_rooms">Active rooms</string>
    <string name="nav_header_title">nav_header_title</string>
    <string name="nav_header_subtitle">nav_header_subtitle</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="room">Room:</string>
    <string name="date">Date :</string>
    <string name="temperature2">Temperature :</string>
    <string name="humidity">Humidity :</string>
    <string name="co2">CO2 :</string>
    <string name="textview">TextView</string>
    <string name="change_theme">Change theme</string>
    <string name="change_the_theme_from_dark_to_light_and_back">Change the theme from dark to light and back</string>
    <string name="change">Change</string>
    <string name="delete_account">Delete account</string>
    <string name="deletes_account_from_the_system">Deletes account from the system</string>
    <string name="delete2">Delete</string>
    <string name="change_password">Change password</string>
    <string name="save">Save</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
</resources>